# ebirdcbc

./: README.md  package-lock.json  package.json
ebirdcbc-backend/: README.md  main.py  pyproject.toml
ebirdcbc-backend/lib/: auth.py  db.py  ebird_auth.py  get_checklist.py  get_track.py  models.py  summary.py  taxon.py  trip_report.py
ebirdcbc-frontend/: package.json
ebirdcbc-frontend/src/app/: layout.tsx  page.tsx
ebirdcbc-frontend/src/app/create-project/: page.tsx
ebirdcbc-frontend/src/app/login/: page.tsx
ebirdcbc-frontend/src/app/manage-project/: page.tsx
ebirdcbc-frontend/src/components/auth/: ChooseProject.tsx  Login.tsx  LoginSignup.tsx  Signup.tsx
ebirdcbc-frontend/src/components/management/: AddTripReport.tsx  AddUser.tsx  Checklists.tsx  CreateProject.tsx  ManageProject.tsx  ProjectInfo.tsx  SingleChecklist.tsx
ebirdcbc-frontend/src/components/map/: Checklist.tsx  ChecklistPopupModal.tsx  GroupSelector.tsx  Mapbox.tsx  tracks.ts  (+7 more)
ebirdcbc-frontend/src/models/: auth.ts  ebird.ts
ebirdcbc-frontend/src/networking/: server_requests.ts
ebirdcbc-v2/: .gitignore  main.py  pyproject.toml
ebirdcbc-v2/lib/: auth.py  db.py  ebird_auth.py  get_checklist.py  summary.py
old_version/: package-lock.json  package.json
old_version/src/Utils/: downloadSpecies.ts  getDbPoints.ts  getPoints.ts  listSpecies.ts  mongoConnect.ts  speciesView.ts
old_version/src/app/: layout.tsx
src/Components/Compiler/: Compiler.tsx
src/Components/Header/: Header.css  Header.tsx
src/Components/Map/: Map.css  Map.tsx
src/Utils/: getPoints.ts
src/app/: page.tsx
(+14 files in other folders)
